[package]
name = "mini-crawler"
version = "0.1.0"
authors = ["Shotaro Tsuji <Shotaro.Tsuji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
eyre = "0.6"
select = "0.5"
url = "2.2"
log = "0.4.0"
env_logger = "0.8.2"
thiserror = "1"
